Remove the license page from the site and shuffle a couple of things around.

--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>$title$</title>
     
-    <link rel="stylesheet" href="/css/udon.css">
+    <link rel="stylesheet" href="/css/docs.css">
 
 <!--tracking-->
 </head><body><div id="wrapper">
@@ -20,8 +20,7 @@
     
     <p id="footer">
         Udon is developed by <a href="http://extralogical.net/">Benedict
-        Eastaugh</a> and released under the <a href="/license.html">BSD
-        license</a>.
+        Eastaugh</a> and released under the BSD license.
     </p>
     
 </div></body></html>
